# feldspar.github.com

./: .gitignore  GhcArgs.hs  Main.hs  README.md  contributors.html  contributors.md  download.html  index.html  introduction.html  params.json  planning.html  planning.md
HCAR/: Feldspar-EF.tex
_site/: README.html  contributors.html  download.html
_site/jekyll-base/: index.html
src/: Main.hs  contributors.md  download.md  feldspar_github_com.cabal  index.md  introduction.md  params.json
src/HCAR/: Feldspar-EF.tex
src/templates/: bootstrap.html
templates/: bootstrap.html
