name:                feldspar-github-com
version:             0.1.0.0
license-file:        LICENSE
author:              Peter A. Jonsson
maintainer:          pj@sics.se
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable feldspar.github.com
  main-is: Main.hs
  other-modules:
    GhcArgs
  build-depends:
    base        >= 4.5 && < 5,
    process,
    cabal-cargs >= 0.4,
    clay        >= 0.8,
    hakyll      >= 4.5
  default-language:    Haskell2010
